feat: add json server

--- a/angular.json
+++ b/angular.json
@@ -101,5 +101,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "820aa66a-9b17-4f30-9078-f916e14fb93b"
     }
 }
