--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "sakai-ng",
-    "version": "17.0.0",
-    "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "concurrently -s -n dev: 'npm:dev:*' ",
+        "dev:vite": "ng serve --port 3000",
+        "dev:db":"json-server --watch server/db.json --routes server/routes.json --port 8080",
         "build": "ng build",
+        "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+        "heroku-postbuild": "ng build --prod"
     },
+
     "private": true,
     "dependencies": {
         "@angular/animations": "^17.0.5",
@@ -27,6 +27,8 @@
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
+        "concurrently": "^8.2.2",
+        "json-server": "^0.17.4",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
